# android-vision

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  colortransfer.cpp  colortransfer.h  native-lib.cpp  opencvutil.cpp  opencvutil.h
app/src/main/java/com/example/pyvision/: MainActivity.java  MyApp.java
app/src/main/java/com/example/pyvision/ar/common/: ArDemoRuntimeException.java  DisplayRotationUtil.java  ImageUtils.java  Logger.java  MatrixUtil.java  PermissionManageUtil.java  ShaderUtil.java  TextDisplayUtil.java  TextureRenderUtil.java
app/src/main/java/com/example/pyvision/ar/world/: GestureEvent.java  HelloSceneform.java  (+2 more)
app/src/main/java/com/example/pyvision/colortransfer/: ColorTransferActivity.java  ColorTransferActivity2.java
app/src/main/java/com/example/pyvision/common/: AbstractListActivity.java  BaseModuleActivity.java  Constants.java  InfoViewFactory.java  ListCardView.java  StatusBarUtils.java  Utils.java
app/src/main/java/com/example/pyvision/helloworld/: HelloworldActivity.java  ImageNetClasses.java
app/src/main/java/com/example/pyvision/mnist/: MnistClassificationActivity.java
app/src/main/java/com/example/pyvision/opengl/: Camera2GLSurfaceView.java  CameraDrawer.java  GLSurfaceCamera2Activity.java  OpenGLUtils.java
app/src/main/java/com/example/pyvision/utils/: ImageFormatUtils.java  ImageUtils.java  Logger.java  TimeUtils.java
app/src/main/java/com/example/pyvision/vision/: ImageClassificationActivity.java  VisionListActivity.java
app/src/main/res/drawable/: classification_back.xml
app/src/main/res/layout/: activity_camera2.xml  activity_cameramix.xml  activity_camerax_surface.xml  activity_colortransfer.xml  activity_glsurface_camera2.xml  activity_image_classification.xml  activity_mnist_classification.xml  activity_ux.xml  main_fragment.xml  tfe_od_activity_camera.xml  tfe_od_camera_connection_fragment_tracking.xml  tfe_od_layout_bottom_sheet.xml  view_finder.xml  vision_list_content.xml  world_java_activity_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
(+27 files in other folders)
